--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,9 @@
 		"xstddef": "cpp",
 		"xstring": "cpp",
 		"xtr1common": "cpp",
-		"xutility": "cpp"
+		"xutility": "cpp",
+		"map": "cpp",
+		"optional": "cpp",
+		"xtree": "cpp"
 	}
 }
